--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,9 @@
   <h1 class="title">Countries Search</h1>
 
   <div id="wrapper">
-    <input class="country-input" id="js-input" type="search" autocomplete="off" placeholder="Enter country name">
+    <input class="country-input" id="js-input" type="search" autocomplete="off" placeholder="Enter country name in English">
     <div class="search-result" id="js-output"></div>
   </div>
-
-  <!-- HTML image reference example. -->
-  <!-- <img src="./images/intro.png" alt="" width="640" /> -->
-
-</body>
+  </body>
 
 </html>
