Errors catch notification added

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <h1 class="title">Countries Search</h1>
+  <h1 class="title">Countries Search 🔎</h1>
 
   <div id="wrapper">
     <input class="country-input" id="js-input" type="search" autocomplete="off" placeholder="Enter country name in English">
